EMIdevelopment/src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Clarifications__c</fullName>
        <label>Clarifications</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>Opportunity.Expected_Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equipment_Description__c</fullName>
        <label>Equipment Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Project_End_Date__c</fullName>
        <label>Expected Project End Date</label>
        <summarizedField>QuoteLineItem.End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.End_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expected_Project_Start_Date__c</fullName>
        <label>Expected Project Start Date</label>
        <summarizedField>QuoteLineItem.Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Start_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Features__c</fullName>
        <label>Features</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Features_and_Benefits_of_Recommendation__c</fullName>
        <label>Features and Benefits of Recommendation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ImageURL__c</fullName>
        <label>ImageURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Images__c</fullName>
        <label>Images</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Installation__c</fullName>
        <label>Installation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Load_Operation_Specification__c</fullName>
        <label>Load/Operation Specification</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Margin_Percent__c</fullName>
        <description>Total Margin % on Quote (after discounting)</description>
        <formula>(TotalPrice -  Total_Cost__c) /  TotalPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Margin % on Quote (after discounting)</inlineHelpText>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <label>Objectives</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Terms_Conditions__c</fullName>
        <label>Terms &amp; Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Total Cost from all products on the Quote (After Discounting)</description>
        <inlineHelpText>Total Cost from all products on the Quote (After Discounting)</inlineHelpText>
        <label>Total Cost</label>
        <summarizedField>QuoteLineItem.Total_Product_Cost_for_rollup_hidden__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Margin__c</fullName>
        <formula>TotalPrice -  Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>